<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small_6"
            android:orientation="horizontal"
            android:paddingStart="@dimen/padding_small_6"
            android:paddingEnd="@dimen/padding_small_6">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:fadingEdge="none"
                android:fontFamily="@font/roboto"
                android:text="@string/title_quantity"
                android:textColor="@color/colorWhite"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:fadingEdge="none"
                android:fontFamily="@font/roboto"
                android:text="@string/title_points"
                android:textAlignment="textEnd"
                android:textColor="@color/colorWhite"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_height_line_1"
            android:background="@color/colorPrimaryDark"
            android:layout_marginHorizontal="@dimen/margin_small_2"
            android:layout_marginTop="@dimen/margin_small_6"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvCompletedTasks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small_6"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="vertical"
        >

        </androidx.recyclerview.widget.RecyclerView>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_height_line_1"
        android:background="@color/colorPrimaryDark"
        android:layout_marginHorizontal="@dimen/margin_small_2"
        android:layout_marginTop="@dimen/margin_small_6" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small_6"
            android:orientation="horizontal"
            android:paddingStart="@dimen/padding_small_6"
            android:paddingEnd="@dimen/padding_small_6">

            <TextView
                android:id="@+id/tvTitleTotalPoints"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:fadingEdge="none"
                android:fontFamily="@font/roboto"
                android:text="@string/title_total"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvTotalPoints"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:fadingEdge="none"
                android:fontFamily="@font/roboto"
                android:text=""
                android:textAlignment="textEnd"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>